# p-speech-to-text

./: .gitignore  README.md  docker-compose.yml
back-stt/: backend.dockerfile
back-stt/app/: key.json  pyproject.toml
back-stt/app/app/: main.py
