[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gabriela Puerta <gabrieladjph1@gmail.com>"]



[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
email-validator = "^1.2.1"
requests = "^2.28.1"
unicorn = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pip = "^22.2.2"
install = "^1.3.5"
python-dotenv = "^0.21.0"
httpx = "^0.23.0"
passlib = "^1.7.4"
bcrypt = "^4.0.0"
python-multipart = "^0.0.5"
black = "^22.8.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
